--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -1439,7 +1439,12 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	select BR2_PACKAGE_XENIA_CANARY			if !BR2_PACKAGE_REGLINUX_RELEASE && BR2_PACKAGE_SYSTEM_TARGET_X86_64_V3
 
 	# Sony PS2
-	select BR2_PACKAGE_PCSX2			if BR2_PACKAGE_SYSTEM_TARGET_X86_64_ANY
+	select BR2_PACKAGE_PCSX2			if BR2_PACKAGE_SYSTEM_TARGET_X86_64_ANY || \
+							   BR2_PACKAGE_SYSTEM_TARGET_ASAHI      || \
+							   BR2_PACKAGE_SYSTEM_TARGET_SM8250     || \
+							   BR2_PACKAGE_SYSTEM_TARGET_SM8550     || \
+							   BR2_PACKAGE_SYSTEM_TARGET_RK3588
+
 	select BR2_PACKAGE_PLAY				if BR2_PACKAGE_SYSTEM_TARGET_X86_64_ANY || \
                                                            BR2_PACKAGE_SYSTEM_TARGET_RK3588     || \
                                                            BR2_PACKAGE_SYSTEM_TARGET_SM8250     || \
