Some build fixes and bumps

--- a/custom/package/Config.in
+++ b/custom/package/Config.in
@@ -2238,6 +2238,7 @@ menu "Other"
 	source "package/libgeos/Config.in"
 	source "package/libglib2/Config.in"
 	source "package/libglob/Config.in"
+	source "package/libiberty/Config.in"
 	source "package/libical/Config.in"
 	source "package/libite/Config.in"
 	source "package/libks/Config.in"
