--- a/package/emulators/gopher64/Config.in
+++ b/package/emulators/gopher64/Config.in
@@ -3,6 +3,7 @@ config BR2_PACKAGE_GOPHER64
 	depends on BR2_PACKAGE_HOST_RUSTC_TARGET_ARCH_SUPPORTS
 	select BR2_PACKAGE_HOST_RUSTC
 
+	depends on BR2_PACKAGE_CLANG
 	depends on BR2_PACKAGE_WAYLAND
 	depends on BR2_PACKAGE_ALSA_LIB
 	depends on BR2_PACKAGE_HAS_LIBGL
