--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -1235,6 +1235,9 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 	# OpenMW : Morrowind port
 	select BR_PACKAGE_OPENMW			if !BR2_PACKAGE_REGLINUX_RELEASE && BR2_ARCH_IS_64 && BR2_PACKAGE_HAS_LIBGL
 
+	# Augustus : Caesar III port with enhancements
+	select BR2_PACKAGE_AUGUSTUS			if !BR2_PACKAGE_REGLINUX_RELEASE && !BR2_PACKAGE_SYSTEM_TARGET_CHA
+
 	help
 	  Ports
 
