--- a/Config.in
+++ b/Config.in
@@ -173,6 +173,7 @@ endmenu
 
 menu "Ports"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/augustus/Config.in"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/bstone/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/cannonball/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/cdogs/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/ports/cgenius/Config.in"
