--- a/custom/fs/cpio/dracut.conf
+++ b/custom/fs/cpio/dracut.conf
@@ -15,7 +15,7 @@ do_strip=no
 
 # Dracut modules needed
 add_dracutmodules+=" \
-busybox-rootfs
+busybox-rootfs \
 "
 
 # Modules to ignore
@@ -75,37 +75,32 @@ rootfs-block \
 rngd \
 shutdown \
 systemd \
-systemd-udevd \
+systemd-ac-power \
+systemd-ask-password \
 systemd-coredump \
 systemd-creds \
 systemd-cyptsetup \
-systemd-ac-power \
-systemd-ask-password \
-systemd-timedated \
-systemd-rfkill \
-systemd-resolved \
 systemd-hostnamed \
 systemd-initrd \
 systemd-integritysetup \
 systemd-journald \
 systemd-ldconfig \
+systemd-modules-load \
 systemd-networkd \
 systemd-pcrphase \
 systemd-portabled \
 systemd-pstore \
-systemd-timesyncd \
-systemd-veritysetup \
-systemd-modules-load \
-systemd-sysctl \
 systemd-repart \
 systemd-resolved \
 systemd-rfkill \
 systemd-sysctl \
 systemd-sysext \
 systemd-sysusers \
-systemd-tmpfiles \
 systemd-timedated \
 systemd-timesyncd \
+systemd-tmpfiles \
+systemd-udevd \
+systemd-veritysetup \
 squash \
 ssh-client \
 stratis \
