adjust system for regmsg

--- a/package/batocera/utils/hotkeygen/conf/common_context.conf
+++ b/package/batocera/utils/hotkeygen/conf/common_context.conf
@@ -1,5 +1,5 @@
 {
-  "screenshot":       "batocera-screenshot",
+  "screenshot":       "regmsg getScreenshot",
   "volumeup":         "batocera-audio setSystemVolume +5",
   "volumedown":       "batocera-audio setSystemVolume -5",
   "volumemute":       "batocera-audio setSystemVolume mute-toggle",
