--- a/package/system/reglinux-system/system.conf
+++ b/package/system/reglinux-system/system.conf
@@ -205,12 +205,12 @@ updates.type=stable
 ## The global value will be used for all emulators, except if the value is redefined in the emulator
 
 ## Video mode
-## Force the emulator to run at this resolution. To check available resolutions, run: system-resolution listModes
+## Force the emulator to run at this resolution. To check available resolutions, run: regmsg listModes
 ## See https://wiki.batocera.org/display_issues
 #global.videomode=CEA 4 HDMI
 
 ## Set the preferred output
-## To check available outputs, run: system-resolution listOutputs
+## To check available outputs, run: regmsg listOutputs
 #global.videooutput=""
 
 ## DPI
