--- a/custom/toolchain/Config.in
+++ b/custom/toolchain/Config.in
@@ -651,6 +651,10 @@ config BR2_TOOLCHAIN_HEADERS_AT_LEAST_6_13
 	bool
 	select BR2_TOOLCHAIN_HEADERS_AT_LEAST_6_12
 
+config BR2_TOOLCHAIN_HEADERS_AT_LEAST_6_14
+	bool
+	select BR2_TOOLCHAIN_HEADERS_AT_LEAST_6_13
+
 # This should be selected by the latest version, above, to indicate that
 # Buildroot does not know of more recent headers than the ones selected.
 # This allows using toolchains with headers more recent than Buildroot
@@ -662,6 +666,7 @@ config BR2_TOOLCHAIN_HEADERS_LATEST
 # stops affecting a value on the first matching default.
 config BR2_TOOLCHAIN_HEADERS_AT_LEAST
 	string
+	default "6.14" if BR2_TOOLCHAIN_HEADERS_AT_LEAST_6_14
 	default "6.13" if BR2_TOOLCHAIN_HEADERS_AT_LEAST_6_13
 	default "6.12" if BR2_TOOLCHAIN_HEADERS_AT_LEAST_6_12
 	default "6.11" if BR2_TOOLCHAIN_HEADERS_AT_LEAST_6_11
