Initial RADXA NIO 12L (MT8395) bringup with 6.14-rc Collabora kernel

--- a/board/mediatek/mt8395/radxa-nio-12l/genimage.cfg
+++ b/board/mediatek/mt8395/radxa-nio-12l/genimage.cfg
@@ -1,3 +1,10 @@
+#image efi.vfat {
+#	vfat {
+#		extraargs = "-F 32 -n EFI"
+#	}
+#	size = 64M
+#}
+
 image boot.vfat {
 	vfat {
 		extraargs = "-F 32 -n REGLINUX"
@@ -19,20 +26,28 @@ image userdata.ext4 {
 
 image reglinux.img {
 	hdimage {
+		partition-table-type = "gpt"
 		align = "1M"
 	}
 
-	# TODO bootloader
+	# No bootloader, we use Grub2 EFI boot
+	# Bootloader has to live on UFS partition
+
+#	partition EFI {
+#                partition-type-uuid = "U"
+#		bootable = "true"
+#		image = "efi.vfat"
+#		offset = 4M
+#	}
 
 	partition vfat {
-		partition-type = 0xC
+                partition-type-uuid = "F"
 		bootable = "true"
 		image = "boot.vfat"
-		offset = 4M
 	}
 
 	partition userdata {
-		partition-type = 0x83
+                partition-type-uuid = "L"
 		image = "userdata.ext4"
 	}
 }
