--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -253,6 +253,7 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 						   !BR2_PACKAGE_SYSTEM_TARGET_ODIN		&& \
 						   !BR2_PACKAGE_SYSTEM_TARGET_SM8550		&& \
 						   !BR2_PACKAGE_SYSTEM_TARGET_H700		&& \
+						   !BR2_PACKAGE_SYSTEM_TARGET_MT8395		&& \
 						   !BR2_PACKAGE_SYSTEM_TARGET_ASAHI
 
 	select BR2_PACKAGE_RTL8821AU_MORROWNR	if BR2_PACKAGE_SYSTEM_TARGET_S922X || BR2_PACKAGE_SYSTEM_TARGET_A3GEN2 || BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
@@ -267,7 +268,7 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 						   BR2_PACKAGE_SYSTEM_TARGET_A3GEN2	|| \
 						   BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
 
-	select BR2_PACKAGE_RTL8192EU		if !BR2_PACKAGE_SYSTEM_TARGET_JZ4770 && !BR2_PACKAGE_SYSTEM_TARGET_BCM2835 && !BR2_PACKAGE_SYSTEM_TARGET_CHA
+	select BR2_PACKAGE_RTL8192EU		if !BR2_PACKAGE_SYSTEM_TARGET_JZ4770 && !BR2_PACKAGE_SYSTEM_TARGET_BCM2835 && !BR2_PACKAGE_SYSTEM_TARGET_CHA && !BR2_PACKAGE_SYSTEM_TARGET_MT8395
 
 	select BR2_PACKAGE_RTL8822CS		if BR2_PACKAGE_SYSTEM_TARGET_S905GEN3
 
