--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
@@ -136,7 +136,7 @@ coco:
   core:     mame
 colecovision:
   emulator: libretro
-  core:     bluemsx
+  core:     gearcoleco
 corsixth:
   emulator: corsixth
   core:     corsixth
