--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -4,6 +4,9 @@ source "$BR2_EXTERNAL_REGLINUX_PATH/package/system/reglinux-system/Config.in.tar
 # GPU drivers and Vulkan
 source "$BR2_EXTERNAL_REGLINUX_PATH/package/system/reglinux-system/Config.in.gpu"
 
+# Networking
+source "$BR2_EXTERNAL_REGLINUX_PATH/package/system/reglinux-system/Config.in.network"
+
 # Emulators
 source "$BR2_EXTERNAL_REGLINUX_PATH/package/system/reglinux-system/Config.in.emulators"
 
@@ -69,7 +72,6 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	select BR2_PACKAGE_BATOCERA_UDEV_RULES		# extra udev rules for specifics joysticks/devices
 	select BR2_PACKAGE_XOSD				if BR2_PACKAGE_XSERVER_XORG_SERVER # osd information displaying
 	select BR2_PACKAGE_BATOCERA_BATTERY_CHECKER	if BR2_PACKAGE_XOSD
-	select BR2_PACKAGE_CIFS_UTILS			# required for boot mounts
 	select BR2_PACKAGE_DOSFSTOOLS			# fat
 	select BR2_PACKAGE_DOSFSTOOLS_FSCK_FAT		# fat
 	select BR2_PACKAGE_DOSFSTOOLS_MKFS_FAT		# fat
@@ -79,27 +81,16 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	select BR2_PACKAGE_NTFS_3G				# ntfs-3g will only install on kernel 5.4 or 5.10 and will build ntfsprogs, for both NTFS3 and ntfs-3g
 	select BR2_PACKAGE_NTFS_3G_NTFSPROGS
 	select BR2_PACKAGE_BTRFS_PROGS			# btrfs
-	select BR2_PACKAGE_CONNMAN			# network manager
-	select BR2_PACKAGE_CONNMAN_WIFI			# network manager
-	select BR2_PACKAGE_CONNMAN_CLIENT		# network manager
-	select BR2_PACKAGE_CONNMAN_LOOPBACK		# network manager
-	select BR2_PACKAGE_BATOCERA_WPA			# wireless tools
-	select BR2_PACKAGE_WIRELESS_REGDB		# wireless regulatory DB
-	select BR2_PACKAGE_IW				# wireless country config for regulatoryDB
-	select BR2_PACKAGE_WIRELESS_TOOLS		# wireless tools
-	select BR2_PACKAGE_WIRELESS_TOOLS_LIB		# wireless tools
-	select BR2_PACKAGE_DROPBEAR			# ssh server
+
 	select BR2_PACKAGE_PM_UTILS			# suspend
 	select BR2_PACKAGE_EVSIEVE			if !BR2_PACKAGE_SYSTEM_TARGET_JZ4770 # linux tool to manipulate events (like joining them) ; armv8 in 32 bits seems not supported
 	select BR2_PACKAGE_UTIL_LINUX_LIBMOUNT		# for util-linux compilation to work (so, may be removed in the future)
 	select BR2_PACKAGE_FBDUMP			# tool to capture snapshots from the Linux kernel framebuffer device and write them out as a PPM file
 	select BR2_PACKAGE_FBGRAB			# framebuffer screenshot program, capturing the linux frambuffer and converting it to a png-picture
-	#nope select BR2_PACKAGE_FBV				# very simple graphic file viewer for the framebuffer console, capable of displaying GIF, JPEG, PNG and BMP files using libungif, libjpeg and libpng
 	select BR2_PACKAGE_EUDEV_RULES_GEN		# fork of systemd-udev with the goal of obtaining better compatibility with existing software such as OpenRC and Upstart
 	select BR2_PACKAGE_BOOST_ATOMIC			# library that provides atomic data types and operations on these data types
 	select BR2_PACKAGE_UTIL_LINUX_LIBSMARTCOLS	# library is used for smart adaptive formatting of tabular data
 	select BR2_PACKAGE_UTIL_LINUX_SETTERM		# Set terminal attributes
-	#nope select BR2_PACKAGE_OPENVPN			# VPN support
 	select BR2_PACKAGE_USB_MODESWITCH		# USB modeswitch support
 	select BR2_PACKAGE_UMTOOL			if !BR2_PACKAGE_SYSTEM_TARGET_CHA # command line tool for configuring Ultimarc arcade hardware
 	select BR2_PACKAGE_PYTHON_HIDAPI		# Communication with USB HID devices via Python
@@ -133,27 +124,17 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	select BR2_PACKAGE_BATOCERA_BLUETOOTH			# batocera bluetooth
 	select BR2_PACKAGE_REGLINUX_NOTICE			# boot pdf notice
 	select BR2_PACKAGE_REGLINUX_TEST			# reglinux test script
-	select BR2_PACKAGE_WGET					# download tools
-	select BR2_PACKAGE_LIBCURL_CURL				# download tools
-	select BR2_PACKAGE_NGHTTP2				# required for curl http2
-	select BR2_PACKAGE_CA_CERTIFICATES			# ssl certificates
 
 	select BR2_PACKAGE_LIBDRM
 	select BR2_PACKAGE_LIBV4L_UTILS				if BR2_PACKAGE_V4L
 	select BR2_PACKAGE_BATOCERA_DRMINFO			if BR2_PACKAGE_LIBDRM
-	#select BR2_PACKAGE_LIRC_TOOLS				if !BR2_PACKAGE_SYSTEM_TARGET_CHA # lirc (remote control)
 	select BR2_PACKAGE_LIBCEC				# libcec
 	select BR2_PACKAGE_LIBCEC_LINUX_API			# libcec linux api
 	select BR2_PACKAGE_EDID_DECODE				# edid monitor/tv support
 	select BR2_PACKAGE_READ_EDID				# edid monitor/tv support
 	select BR2_SYSTEM_ENABLE_NLS				# locales
 	select BR2_PACKAGE_ACPID				if BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
-	select BR2_PACKAGE_AVAHI				# service discovery on local network
-	select BR2_PACKAGE_AVAHI_DAEMON				# ping batocera.local
-	select BR2_PACKAGE_AVAHI_LIBDNSSD_COMPATIBILITY		# bonjour
-	select BR2_PACKAGE_NTP
-	select BR2_PACKAGE_RSYNC
-	select BR2_PACKAGE_LIBOPENSSL_BIN			# required to encode the wifi password
+
 	select BR2_PACKAGE_KBD					# loadkeys
 	select BR2_PACKAGE_XKEYBOARD_CONFIG			if BR2_PACKAGE_LIBXKBCOMMON # requirement for xkb to work, xkb is used by kodi, even without x for the keyboard
 	select BR2_PACKAGE_GPTFDISK				# fs resize
@@ -164,8 +145,7 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	select BR2_PACKAGE_FLATPAK				if BR2_PACKAGE_SYSTEM_TARGET_X86_64_ANY # flatpak app packaging system
 	#select BR2_PACKAGE_BAUH				if BR2_PACKAGE_SYSTEM_TARGET_X86_64_ANY # flatpak gui
 	select BR2_PACKAGE_RYZENADJ				if BR2_PACKAGE_SYSTEM_TARGET_X86_64_ANY # ryzen apu configuration
-	select BR2_PACKAGE_SYNCTHING			if !BR2_PACKAGE_SYSTEM_TARGET_JZ4770 && !BR2_PACKAGE_SYSTEM_TARGET_CHA # sync files across multiple batoceras
-	select BR2_PACKAGE_RCLONE				if BR2_PACKAGE_SYSTEM_TARGET_X86_64_ANY # sync files in the cloud (require x86_64)
+
 	select BR2_PACKAGE_HTOP					# resources monitor
 	select BR2_PACKAGE_BTOP					# resources monitor
 	select BR2_PACKAGE_MOKUTIL				if BR2_PACKAGE_SYSTEM_TARGET_X86_64_ANY # mokutil machine owner key utility
@@ -216,6 +196,9 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	# irq balancing
 	select BR2_PACKAGE_IRQBALANCE
 
+	# networking stack
+	select BR2_PACKAGE_REGLINUX_NETWORK
+
 	# music support
 	select BR2_PACKAGE_REGLINUX_MUSIC_SUPPORT
 
@@ -240,45 +223,6 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 						    BR2_PACKAGE_SYSTEM_TARGET_JH7110	|| \
 						    BR2_PACKAGE_SYSTEM_TARGET_K1
 
-	# wireless drivers
-	# use the morrownr RTL8812au & RTL8821au drivers
-	select BR2_PACKAGE_RTL8812AU		if !BR2_PACKAGE_SYSTEM_TARGET_JZ4770		&& \
-						   !BR2_PACKAGE_SYSTEM_TARGET_BCM2835		&& \
-						   !BR2_PACKAGE_SYSTEM_TARGET_H3		&& \
-						   !BR2_PACKAGE_SYSTEM_TARGET_CHA		&& \
-						   !BR2_PACKAGE_SYSTEM_TARGET_RK3326		&& \
-						   !BR2_PACKAGE_SYSTEM_TARGET_RK3588		&& \
-						   !BR2_PACKAGE_SYSTEM_TARGET_RK3128		&& \
-						   !BR2_PACKAGE_SYSTEM_TARGET_S812		&& \
-						   !BR2_PACKAGE_SYSTEM_TARGET_ODIN		&& \
-						   !BR2_PACKAGE_SYSTEM_TARGET_SM8550		&& \
-						   !BR2_PACKAGE_SYSTEM_TARGET_H700		&& \
-						   !BR2_PACKAGE_SYSTEM_TARGET_MT8395		&& \
-						   !BR2_PACKAGE_SYSTEM_TARGET_ASAHI
-
-	select BR2_PACKAGE_RTL8821AU_MORROWNR	if BR2_PACKAGE_SYSTEM_TARGET_S922X || BR2_PACKAGE_SYSTEM_TARGET_A3GEN2 || BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
-	select BR2_PACKAGE_RTL88X2BU		if BR2_PACKAGE_SYSTEM_TARGET_S922X || BR2_PACKAGE_SYSTEM_TARGET_A3GEN2 || BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
-	select BR2_PACKAGE_RTL8723BU		if BR2_PACKAGE_SYSTEM_TARGET_S922X || BR2_PACKAGE_SYSTEM_TARGET_A3GEN2 || BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
-	select BR2_PACKAGE_RTL8188EU		if BR2_PACKAGE_SYSTEM_TARGET_S922X || BR2_PACKAGE_SYSTEM_TARGET_A3GEN2 || BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
-	select BR2_PACKAGE_RTL8821CU		if BR2_PACKAGE_SYSTEM_TARGET_S922X || BR2_PACKAGE_SYSTEM_TARGET_A3GEN2 || \
-						   BR2_PACKAGE_SYSTEM_TARGET_X86_ANY || BR2_PACKAGE_SYSTEM_TARGET_RK3588
-	select BR2_PACKAGE_RTL8189ES		if BR2_PACKAGE_SYSTEM_TARGET_S905 || BR2_PACKAGE_SYSTEM_TARGET_S905GEN2 || BR2_PACKAGE_SYSTEM_TARGET_S905GEN3
-	select BR2_PACKAGE_RTL8189FS		if BR2_PACKAGE_SYSTEM_TARGET_H3	|| \
-						   BR2_PACKAGE_SYSTEM_TARGET_S922X	|| \
-						   BR2_PACKAGE_SYSTEM_TARGET_A3GEN2	|| \
-						   BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
-
-	select BR2_PACKAGE_RTL8192EU		if !BR2_PACKAGE_SYSTEM_TARGET_JZ4770 && !BR2_PACKAGE_SYSTEM_TARGET_BCM2835 && !BR2_PACKAGE_SYSTEM_TARGET_CHA && !BR2_PACKAGE_SYSTEM_TARGET_MT8395
-
-	select BR2_PACKAGE_RTL8822CS		if BR2_PACKAGE_SYSTEM_TARGET_S905GEN3
-
-	# Rock 5c
-	select BR2_PACKAGE_AIC8800		if BR2_PACKAGE_SYSTEM_TARGET_RK3588
-
-	# ethernet
-	#select BR2_PACKAGE_R8125		if BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
-	#select BR2_PACKAGE_R8168		if BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
-
 	# compression tools
 	select BR2_PACKAGE_UNZIP	# for /userdata/system/upgrade/share.zip
 	select BR2_PACKAGE_XZ		# for updates
@@ -296,7 +240,6 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	select BR2_PACKAGE_OD_COMMANDER # ALL
 	select BR2_PACKAGE_FDUPES
 	select BR2_PACKAGE_PYTHON_SERIAL		if BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
-	select BR2_PACKAGE_BATOCERA_ETHTOOL
 	select BR2_PACKAGE_SMARTMONTOOLS
 
 	# gpio controllers
@@ -323,19 +266,9 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	# FUN R1 Gamepad
 	select BR2_PACKAGE_FUN_R1_GAMEPAD	if BR2_PACKAGE_SYSTEM_TARGET_S905
 
-	# odin wifi baseband dependencies
-	select BR2_PACKAGE_PD_MAPPER		if BR2_PACKAGE_SYSTEM_TARGET_ODIN
-	select BR2_PACKAGE_QRTR			    if BR2_PACKAGE_SYSTEM_TARGET_ODIN
-	select BR2_PACKAGE_RMTFS		    if BR2_PACKAGE_SYSTEM_TARGET_ODIN
-	select BR2_PACKAGE_TQFTPSERV		if BR2_PACKAGE_SYSTEM_TARGET_ODIN
-
 	# leds
 	select BR2_PACKAGE_AYN_PLATFORM		  if BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
 	select BR2_PACKAGE_AYANEO_PLATFORM    if BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
-
-	# REG-Linux
-	select BR2_PACKAGE_REGLINUX_SAMBA	# samba
-	select BR2_PACKAGE_WSDD_NATIVE		# service discovery on local network (windows network neighborhood)
 
 	help
 	  Install the batocera.linux system files
@@ -434,19 +367,6 @@ config BR2_PACKAGE_BATOCERA_GUNS
 	select BR2_PACKAGE_DOLPHINCROSSHAIRSPACK		if BR2_PACKAGE_DOLPHIN_EMU
 	select BR2_PACKAGE_STEAMDECKGUN				if BR2_PACKAGE_SYSTEM_TARGET_X86_64_ANY
 
-config BR2_PACKAGE_BATOCERA_WPA
-	bool "batocera.linux WPA supplicant"
-
-	select BR2_PACKAGE_WPA_SUPPLICANT				# wifi
-	select BR2_PACKAGE_WPA_SUPPLICANT_CLI				# wifi
-	select BR2_PACKAGE_WPA_SUPPLICANT_DBUS				# wifi
-	select BR2_PACKAGE_WPA_SUPPLICANT_DBUS_INTROSPECTION		# wifi
-	select BR2_PACKAGE_WPA_SUPPLICANT_WIRED				# wpa_supplicant driver, 2.10 requires kernel > 4.4
-	select BR2_PACKAGE_WPA_SUPPLICANT_WPA3				# wifi
-	select BR2_PACKAGE_WPA_SUPPLICANT_NL80211			# wpa_supplicant driver
-	select BR2_PACKAGE_WPA_SUPPLICANT_WEXT				# wpa_supplicant driver
-
-
 config BR2_PACKAGE_BATOCERA_LINUX_FIRMWARES
 	bool "batocera.linux Firmwares packages selection"
 
@@ -456,22 +376,8 @@ config BR2_PACKAGE_BATOCERA_LINUX_FIRMWARES
 	# buildroot firmware
 	select BR2_PACKAGE_LINUX_FIRMWARE		if BR2_PACKAGE_SYSTEM_TARGET_RK3288
 
-	# common firmwares
-	select BR2_PACKAGE_UX500_FIRMWARE
-	select BR2_PACKAGE_WILC1000_FIRMWARE
-	select BR2_PACKAGE_ZD1211_FIRMWARE
-	select BR2_PACKAGE_B43_FIRMWARE
-
 	# audio
 	select BR2_PACKAGE_SOUND_OPEN_FIRMWARE			if BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
-
-	# x86 (maybe some firmware could be for all, to be checked)
-	select BR2_PACKAGE_WILINK_BT_FIRMWARE			if BR2_PACKAGE_SYSTEM_TARGET_X86_ANY
-
-	# RaspberryPi Firmwares bluetooth and wifi
-	select BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI		if BR2_PACKAGE_BATOCERA_RPI_ANY
-	select BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI_BT	if BR2_PACKAGE_BATOCERA_RPI_ANY
-	select BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI_WIFI	if BR2_PACKAGE_BATOCERA_RPI_ANY
 
 	# RK3588
 	select BR2_PACKAGE_FIRMWARE_RK3588			if BR2_PACKAGE_SYSTEM_TARGET_RK3588
