Add lr-sameboy (high accuracy GB/GBC core) for all 64-bit architectures

--- a/Config.in
+++ b/Config.in
@@ -88,6 +88,7 @@ menu "Libretro"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/emulators/libretro/libretro-ppsspp/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/emulators/libretro/libretro-puae/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/emulators/libretro/libretro-puae2021/Config.in"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/emulators/libretro/libretro-sameboy/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/emulators/libretro/libretro-snes9x/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/emulators/libretro/libretro-stella/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/emulators/libretro/libretro-vba-m/Config.in"
@@ -278,6 +279,7 @@ menu "Utils"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/itstool/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/lgogdownloader/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/re2c/Config.in"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/rgbds/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/vkbasalt/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/wsdd-native/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/xxd/Config.in"
