--- a/Config.in
+++ b/Config.in
@@ -273,6 +273,7 @@ endmenu
 menu "Utils"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/btop/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/evsieve/Config.in"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/inputplumber/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/fdupes/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/flatpak/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/gamescope/Config.in"
