--- a/package/batocera/emulationstation/batocera-es-system/es_systems.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_systems.yml
@@ -273,6 +273,7 @@ gbc:
       mgba:     { requireAnyOf: [BR2_PACKAGE_LIBRETRO_MGBA] }
       vba-m:    { requireAnyOf: [BR2_PACKAGE_LIBRETRO_VBA_M] }
       mesen-s:  { requireAnyOf: [BR2_PACKAGE_LIBRETRO_MESENS] }
+      sameboy:  { requireAnyOf: [BR2_PACKAGE_LIBRETRO_SAMEBOY] }
   comment_en: |
     For more info: https://wiki.batocera.org/systems:gbc
   comment_fr: |
@@ -292,6 +293,7 @@ gb:
       mgba:     { requireAnyOf: [BR2_PACKAGE_LIBRETRO_MGBA] }
       vba-m:    { requireAnyOf: [BR2_PACKAGE_LIBRETRO_VBA_M] }
       mesen-s:  { requireAnyOf: [BR2_PACKAGE_LIBRETRO_MESENS] }
+      sameboy:  { requireAnyOf: [BR2_PACKAGE_LIBRETRO_SAMEBOY] }
   comment_en: |
     For more info: https://wiki.batocera.org/systems:gb
   comment_fr: |
@@ -4833,15 +4835,15 @@ doom3:
             │   ├── pak007.pk4
             │   └── pak008.pk4
             └── d3xp/
-                ├── pak000.pk4 
+                ├── pak000.pk4
                 └── pak001.pk4
-    
-    Create a `Doom 3.d3` file in the roms/doom3 directory. 
+
+    Create a `Doom 3.d3` file in the roms/doom3 directory.
     If you have the Resurrection of Evil mod then Create a `Doom 3 - Resurrection of Evil.d3` file too.
 
     The `Doom 3.d3` file should contain the path to the base game. - i.e. base/pak000.pk4
     Similarly `Doom 3 - Resurrection of Evil.d3` should be - d3xp/pak000.pk4
-    
+
     For more info: https://wiki.batocera.org/systems:doom3
   comment_fr: |
     Trouvez la documentation ici: https://wiki.batocera.org/systems:doom3
@@ -5473,7 +5475,7 @@ ps4:
     Before you can play a game you must install the game via the associated .PKG file of your backed-up game using the F1 menu.
     Then in the new installation directory for the installed game, create a file with a .ps4 extension so EmularionStation will see it.
     i.e. /userdata/roms/ps4/CUSA03173/Bloodborne.ps4
-    
+
     Then you can launch the game from EmulationStation accordingly.
 
     DLC content will be stored in: /userdata/roms/ps4/DLC
