lr-picodrive 2.0.4 + easyrpg 0.8.1

--- a/Config.in
+++ b/Config.in
@@ -251,6 +251,7 @@ menu "Libraries"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/libtidy/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/libxmp/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/libzedmd/Config.in"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/lhasa/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/lunasvg/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/mimalloc/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/libraries/plutovg/Config.in"
