--- a/package/engines/libretro/libretro-easyrpg/Config.in
+++ b/package/engines/libretro/libretro-easyrpg/Config.in
@@ -14,6 +14,10 @@ config BR2_PACKAGE_LIBRETRO_EASYRPG
     select BR2_PACKAGE_LIBXMP
     select BR2_PACKAGE_WILDMIDI
     select BR2_PACKAGE_LIBLCF
+    select BR2_PACKAGE_JSON_FOR_MODERN_CPP
+    select BR2_PACKAGE_LIBSNDFILE
+    select BR2_PACKAGE_LHASA
+
       help
         EasyRPG Player is a game interpreter to play RPG Maker 2000, 2003 and EasyRPG games.
         It uses the LCF parser library (liblcf) to read RPG Maker game data.
