lhasa: fix: missing "

--- a/package/libraries/lhasa/Config.in
+++ b/package/libraries/lhasa/Config.in
@@ -1,5 +1,5 @@
 config BR2_PACKAGE_LHASA
-	bool "lhasa
+	bool "lhasa"
 	help
 	  Lhasa is a library for parsing LHA (.lzh) archives and a free
 	  replacement for the Unix LHA tool.
