--- a/package/emulators/duckstation/Config.in
+++ b/package/emulators/duckstation/Config.in
@@ -17,6 +17,7 @@ config BR2_PACKAGE_DUCKSTATION
 	select BR2_PACKAGE_LIBBACKTRACE
 	select BR2_PACKAGE_WEBP
 	select BR2_PACKAGE_CPUINFO
+	select BR2_PACKAGE_CPUINFO_ARCH_SUPPORTS
 	select BR2_PACKAGE_SPIRV_CROSS
 	select BR2_PACKAGE_LIBSOUNDTOUCH
 	help
