--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -10,6 +10,9 @@ source "$BR2_EXTERNAL_REGLINUX_PATH/package/system/reglinux-system/Config.in.net
 # Emulators
 source "$BR2_EXTERNAL_REGLINUX_PATH/package/system/reglinux-system/Config.in.emulators"
 
+# Engines
+source "$BR2_EXTERNAL_REGLINUX_PATH/package/system/reglinux-system/Config.in.engines"
+
 # Ports
 source "$BR2_EXTERNAL_REGLINUX_PATH/package/system/reglinux-system/Config.in.ports"
 
@@ -171,13 +174,13 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	select BR2_PACKAGE_ELEMENT14_PI_DESKTOP		if BR2_PACKAGE_SYSTEM_TARGET_BCM2836 || BR2_PACKAGE_SYSTEM_TARGET_BCM2837 # rpi2/rpi3
 	select BR2_PACKAGE_GPICASE			if BR2_PACKAGE_SYSTEM_TARGET_BCM2835 || BR2_PACKAGE_SYSTEM_TARGET_BCM2836 || BR2_PACKAGE_SYSTEM_TARGET_BCM2711 # retroflag gpicase
 	select BR2_PACKAGE_ROSHAMBO			if BR2_PACKAGE_SYSTEM_TARGET_RK3399 # roshambo case
-	select BR2_PACKAGE_RPIGPIOSWITCH		if BR2_PACKAGE_BATOCERA_RPI_ANY # gpio switchs
-	select BR2_PACKAGE_RETROGAME			if BR2_PACKAGE_BATOCERA_RPI_ANY # gpio pads
+	select BR2_PACKAGE_RPIGPIOSWITCH		if BR2_PACKAGE_SYSTEM_TARGET_RPI_ANY # gpio switchs
+	select BR2_PACKAGE_RETROGAME			if BR2_PACKAGE_SYSTEM_TARGET_RPI_ANY # gpio pads
 	select BR2_PACKAGE_DESKPIPRO			if BR2_PACKAGE_SYSTEM_TARGET_BCM2711 # deskpi pro case rpi4 only
 	select BR2_PACKAGE_PIBOY			if BR2_PACKAGE_SYSTEM_TARGET_BCM2836	|| \
 							   BR2_PACKAGE_SYSTEM_TARGET_BCM2837	|| \
 							   BR2_PACKAGE_SYSTEM_TARGET_BCM2711 # piboy rpi3/rpi4
-	select BR2_PACKAGE_PICADE			if BR2_PACKAGE_BATOCERA_RPI_ANY # picade arcade case
+	select BR2_PACKAGE_PICADE			if BR2_PACKAGE_SYSTEM_TARGET_RPI_ANY # picade arcade case
 	select BR2_PACKAGE_PIRONMAN			if BR2_PACKAGE_SYSTEM_TARGET_BCM2711 # pironman case is rpi4 only
 	select BR2_PACKAGE_PIRONMAN5			if BR2_PACKAGE_SYSTEM_TARGET_BCM2712 # pironman 5 case is rpi5 only
 
@@ -243,12 +246,12 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	select BR2_PACKAGE_SMARTMONTOOLS
 
 	# gpio controllers
-	select BR2_PACKAGE_DB9_GPIO_RPI					if BR2_PACKAGE_BATOCERA_RPI_ANY
-	select BR2_PACKAGE_GAMECON_GPIO_RPI				if BR2_PACKAGE_BATOCERA_RPI_ANY
-	select BR2_PACKAGE_MK_ARCADE_JOYSTICK_RPI			if BR2_PACKAGE_BATOCERA_RPI_ANY
-	select BR2_PACKAGE_PYTHON_RPI_GPIO				if BR2_PACKAGE_BATOCERA_RPI_ANY && !BR2_PACKAGE_SYSTEM_TARGET_BCM2712
+	select BR2_PACKAGE_DB9_GPIO_RPI					if BR2_PACKAGE_SYSTEM_TARGET_RPI_ANY
+	select BR2_PACKAGE_GAMECON_GPIO_RPI				if BR2_PACKAGE_SYSTEM_TARGET_RPI_ANY
+	select BR2_PACKAGE_MK_ARCADE_JOYSTICK_RPI			if BR2_PACKAGE_SYSTEM_TARGET_RPI_ANY
+	select BR2_PACKAGE_PYTHON_RPI_GPIO				if BR2_PACKAGE_SYSTEM_TARGET_RPI_ANY && !BR2_PACKAGE_SYSTEM_TARGET_BCM2712
 	select BR2_PACKAGE_PYTHON_GPIOZERO				if BR2_PACKAGE_SYSTEM_TARGET_BCM2835 || BR2_PACKAGE_SYSTEM_TARGET_BCM2836
-	select BR2_PACKAGE_PYTHON_ADAFRUIT_CIRCUITPYTHON_WS2801		if BR2_PACKAGE_BATOCERA_RPI_ANY && !BR2_PACKAGE_SYSTEM_TARGET_BCM2835 && !BR2_PACKAGE_SYSTEM_TARGET_BCM2712
+	select BR2_PACKAGE_PYTHON_ADAFRUIT_CIRCUITPYTHON_WS2801		if BR2_PACKAGE_SYSTEM_TARGET_RPI_ANY && !BR2_PACKAGE_SYSTEM_TARGET_BCM2835 && !BR2_PACKAGE_SYSTEM_TARGET_BCM2712
 	select BR2_PACKAGE_PYTHON3_GPIOD				if BR2_PACKAGE_SYSTEM_TARGET_BCM2712
 
 	# GPIO kernel driver
@@ -291,8 +294,8 @@ config BR2_PACKAGE_SYSTEM_DEBUG
 	help
 	  Install packages for system debug mode
 
-config BR2_PACKAGE_BATOCERA_TOOLS
-	bool "batocera.linux system tools packages selection"
+config BR2_PACKAGE_SYSTEM_TOOLS
+	bool "System tools"
 
 	select BR2_PACKAGE_JSTEST2				# joysticks tester
 	select BR2_PACKAGE_EVTEST				# joysticks tester
@@ -324,25 +327,25 @@ config BR2_PACKAGE_REGLINUX_RETROARCH
 	select BR2_PACKAGE_REGLINUX_SHADERS
 
 #### systems ####
-config BR2_PACKAGE_BATOCERA_ALL_SYSTEMS
-	bool "batocera.linux all emulators packages selection"
+config BR2_PACKAGE_REGLINUX_ALL_SYSTEMS
+	bool "REG-Linux all emulators packages selection"
 
 	# RetroArch frontend and core data
 	select BR2_PACKAGE_REGLINUX_RETROARCH
 
 	# Include other systems
-	select BR2_PACKAGE_BATOCERA_ARCADE_SYSTEMS
-	select BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
-	select BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
-	select BR2_PACKAGE_BATOCERA_COMPUTER_SYSTEMS    if !BR2_PACKAGE_SYSTEM_TARGET_CHA
-	select BR2_PACKAGE_BATOCERA_MSDOS_SYSTEMS	if !BR2_PACKAGE_SYSTEM_TARGET_CHA
-	select BR2_PACKAGE_BATOCERA_SCUMMVM_SYSTEMS	if !BR2_PACKAGE_SYSTEM_TARGET_CHA
-	select BR2_PACKAGE_BATOCERA_HOMEBREW_SYSTEMS
-	#select BR2_PACKAGE_BATOCERA_WINE_SYSTEMS
-	select BR2_PACKAGE_BATOCERA_GAMESTREAM_SYSTEMS	if !BR2_PACKAGE_SYSTEM_TARGET_CHA
-	select BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
-	select BR2_PACKAGE_BATOCERA_FLASH_SYSTEMS	if !BR2_PACKAGE_SYSTEM_TARGET_CHA
-	#select BR2_PACKAGE_BATOCERA_STEAM		if BR2_PACKAGE_SYSTEM_TARGET_X86_64_ANY
+	select BR2_PACKAGE_REGLINUX_ARCADE_SYSTEMS
+	select BR2_PACKAGE_REGLINUX_CONSOLE_SYSTEMS
+	select BR2_PACKAGE_REGLINUX_HANDHELD_SYSTEMS
+	select BR2_PACKAGE_REGLINUX_COMPUTER_SYSTEMS    if !BR2_PACKAGE_SYSTEM_TARGET_CHA
+	select BR2_PACKAGE_REGLINUX_MSDOS_SYSTEMS	if !BR2_PACKAGE_SYSTEM_TARGET_CHA
+	select BR2_PACKAGE_REGLINUX_SCUMMVM_SYSTEMS	if !BR2_PACKAGE_SYSTEM_TARGET_CHA
+	select BR2_PACKAGE_REGLINUX_HOMEBREW_SYSTEMS
+	#select BR2_PACKAGE_REGLINUX_WINE_SYSTEMS
+	select BR2_PACKAGE_REGLINUX_GAMESTREAM_SYSTEMS	if !BR2_PACKAGE_SYSTEM_TARGET_CHA
+	select BR2_PACKAGE_REGLINUX_PORTS_SYSTEMS
+	select BR2_PACKAGE_REGLINUX_FLASH_SYSTEMS	if !BR2_PACKAGE_SYSTEM_TARGET_CHA
+	#select BR2_PACKAGE_REGLINUX_STEAM		if BR2_PACKAGE_SYSTEM_TARGET_X86_64_ANY
 
 	select BR2_PACKAGE_REGLINUX_MULTI_SYSTEMS	if !BR2_PACKAGE_SYSTEM_TARGET_CHA
 	select BR2_PACKAGE_REGLINUX_PINBALL_SYSTEMS	if !BR2_PACKAGE_SYSTEM_TARGET_CHA
@@ -367,8 +370,8 @@ config BR2_PACKAGE_BATOCERA_GUNS
 	select BR2_PACKAGE_DOLPHINCROSSHAIRSPACK		if BR2_PACKAGE_DOLPHIN_EMU
 	select BR2_PACKAGE_STEAMDECKGUN				if BR2_PACKAGE_SYSTEM_TARGET_X86_64_ANY
 
-config BR2_PACKAGE_BATOCERA_LINUX_FIRMWARES
-	bool "batocera.linux Firmwares packages selection"
+config BR2_PACKAGE_SYSTEM_LINUX_FIRMWARES
+	bool "System firmware packages"
 
 	# alllinuxfirmwares
 	select BR2_PACKAGE_ALLLINUXFIRMWARES		if !BR2_PACKAGE_SYSTEM_TARGET_H616 && !BR2_PACKAGE_SYSTEM_TARGET_H700
