Attempt to get modern U-Boot on RK3399, so far KO with heavily patched 6.6 kernel. Hold on.

--- a/board/rockchip/rk3399/hugsun-x99/genimage.cfg
+++ b/board/rockchip/rk3399/hugsun-x99/genimage.cfg
@@ -19,24 +19,25 @@ image userdata.ext4 {
 
 image reglinux.img {
 	hdimage {
+		partition-table-type = "hybrid"
 		align = "1M"
 	}
 
-        partition part_idbloader {
+        partition part_loader {
             in-partition-table = "no"
-            image = "../../uboot-hugsun-x99/idbloader.bin"
+            image = "../uboot-hugsun-x99/idbloader.img"
             offset = 32K
         }
 
         partition part_uboot {
             in-partition-table = "no"
-            image = "../../uboot-hugsun-x99/uboot.img"
+            image = "../uboot-hugsun-x99/uboot.img"
             offset = 8M
         }
 
         partition part_trust {
             in-partition-table = "no"
-            image = "../../uboot-hugsun-x99/trust.bin"
+            image = "../uboot-hugsun-x99/trust.img"
             offset = 12M
         }
 
