--- a/board/rockchip/rk3399/orangepi-800/genimage.cfg
+++ b/board/rockchip/rk3399/orangepi-800/genimage.cfg
@@ -19,19 +19,26 @@ image userdata.ext4 {
 
 image reglinux.img {
 	hdimage {
+		partition-table-type = "hybrid"
 		align = "1M"
 	}
 
-        partition part_idbloader {
+        partition part_loader {
             in-partition-table = "no"
-            image = "../../uboot-orangepi-800/idbloader.img"
+            image = "../uboot-orangepi-800/idbloader.img"
             offset = 32K
         }
 
         partition part_uboot {
             in-partition-table = "no"
-            image = "../../uboot-orangepi-800/u-boot.itb"
+            image = "../uboot-orangepi-800/uboot.img"
             offset = 8M
+        }
+
+        partition part_trust {
+            in-partition-table = "no"
+            image = "../uboot-orangepi-800/trust.img"
+            offset = 12M
         }
 
 	partition vfat {
