--- a/board/rockchip/rk3399/nanopi-m4v2/genimage.cfg
+++ b/board/rockchip/rk3399/nanopi-m4v2/genimage.cfg
@@ -19,25 +19,25 @@ image userdata.ext4 {
 
 image reglinux.img {
 	hdimage {
-                partition-table-type = "hybrid"
+		partition-table-type = "hybrid"
 		align = "1M"
 	}
 
-        partition part_idbloader {
+        partition part_loader {
             in-partition-table = "no"
-            image = "../../uboot-evb-rk3399/idbloader.img"
+            image = "../uboot-nanopi-m4v2/idbloader.img"
             offset = 32K
         }
 
         partition part_uboot {
             in-partition-table = "no"
-            image = "../../uboot-evb-rk3399/uboot.img"
+            image = "../uboot-nanopi-m4v2/uboot.img"
             offset = 8M
         }
 
         partition part_trust {
             in-partition-table = "no"
-            image = "../../uboot-evb-rk3399/trust.img"
+            image = "../uboot-nanopi-m4v2/trust.img"
             offset = 12M
         }
 
