--- a/board/rockchip/rk3399/orangepi-4-lts/boot/extlinux.conf
+++ b/board/rockchip/rk3399/orangepi-4-lts/boot/extlinux.conf
@@ -1,4 +1,4 @@
 LABEL REG-Linux
     LINUX /boot/linux
     FDT /boot/rk3399-orangepi-4-lts.dtb
-    APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyS2,1500000n8
+    APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait loglevel=9 splash=verbose console=ttyS2,1500000n8 console=tty0
