--- a/board/rockchip/rk3399/orangepi-4-lts/genimage.cfg
+++ b/board/rockchip/rk3399/orangepi-4-lts/genimage.cfg
@@ -23,23 +23,29 @@ image reglinux.img {
 		align = "1M"
 	}
 
-	partition part_idbloader {
-		in-partition-table = "no"
-		image = "../../uboot-orangepi-4-lts/idbloader.bin"
-		offset = 32K
-	}
+        #partition part_loader {
+        #    in-partition-table = "no"
+        #    image = "../uboot-orangepi-4-lts/idbloader.img"
+        #    offset = 32K
+        #}
 
-	partition part_uboot {
-		in-partition-table = "no"
-		image = "../../uboot-orangepi-4-lts/u-boot.img"
-		offset = 8M
-	}
+        #partition part_uboot {
+        #    in-partition-table = "no"
+        #    image = "../uboot-orangepi-4-lts/uboot.img"
+        #    offset = 8M
+        #}
 
-	partition part_trust {
-		in-partition-table = "no"
-		image = "../../uboot-orangepi-4-lts/trust.bin"
-		offset = 12M
-	}
+        #partition part_trust {
+        #    in-partition-table = "no"
+        #    image = "../uboot-orangepi-4-lts/trust.img"
+        #    offset = 12M
+        #}
+
+        partition part_boot {
+            in-partition-table = "no"
+            image = "../uboot-orangepi-4-lts/u-boot-rockchip.bin"
+            offset = 32K
+        }
 
 	partition vfat {
 		partition-type = 0xC
