--- a/board/rockchip/rk3399/rock960/genimage.cfg
+++ b/board/rockchip/rk3399/rock960/genimage.cfg
@@ -19,26 +19,32 @@ image userdata.ext4 {
 
 image reglinux.img {
 	hdimage {
-                partition-table-type = "hybrid"
+		partition-table-type = "hybrid"
 		align = "1M"
 	}
 
-        partition part_idbloader {
+        #partition part_loader {
+        #    in-partition-table = "no"
+        #    image = "../uboot-rock960/idbloader.img"
+        #    offset = 32K
+        #}
+
+        #partition part_uboot {
+        #    in-partition-table = "no"
+        #    image = "../uboot-rock960/uboot.img"
+        #    offset = 8M
+        #}
+
+        #partition part_trust {
+        #    in-partition-table = "no"
+        #    image = "../uboot-rock960/trust.img"
+        #    offset = 12M
+        #}
+
+        partition part_boot {
             in-partition-table = "no"
-            image = "../../uboot-evb-rk3399/idbloader.img"
+            image = "../uboot-rock960/u-boot-rockchip.bin"
             offset = 32K
-        }
-
-        partition part_uboot {
-            in-partition-table = "no"
-            image = "../../uboot-evb-rk3399/uboot.img"
-            offset = 8M
-        }
-
-        partition part_trust {
-            in-partition-table = "no"
-            image = "../../uboot-evb-rk3399/trust.img"
-            offset = 12M
         }
 
 	partition vfat {
