--- a/board/rockchip/rk3399/tinkerboard-2/genimage.cfg
+++ b/board/rockchip/rk3399/tinkerboard-2/genimage.cfg
@@ -23,16 +23,22 @@ image reglinux.img {
 		align = "1M"
 	}
 
-        partition part_idbloader {
+        partition part_loader {
             in-partition-table = "no"
-            image = "../../uboot-tinkerboard2/idbloader.img"
+            image = "../uboot-tinkerboard-2/idbloader.img"
             offset = 32K
         }
 
         partition part_uboot {
             in-partition-table = "no"
-            image = "../../uboot-tinkerboard2/u-boot.itb"
+            image = "../uboot-tinkerboard-2/uboot.img"
             offset = 8M
+        }
+
+        partition part_trust {
+            in-partition-table = "no"
+            image = "../uboot-tinkerboard-2/trust.img"
+            offset = 12M
         }
 
 	partition vfat {
