--- a/package/emulators/vita3k/Config.in
+++ b/package/emulators/vita3k/Config.in
@@ -11,6 +11,8 @@ config BR2_PACKAGE_VITA3K
     select BR2_PACKAGE_BOOST_FILESYSTEM
     select BR2_PACKAGE_BOOST_SYSTEM
     select BR2_PACKAGE_PYTHON_RUAMEL_YAML 
+    select BR2_PACKAGE_FMT
+    select BR2_PACKAGE_LIBCURL
     help
       Experimental PlayStation Vita emulator
       
