--- a/package/ports/ioquake3/Config.in
+++ b/package/ports/ioquake3/Config.in
@@ -2,6 +2,12 @@ config BR2_PACKAGE_IOQUAKE3
     bool "ioquake3"
     select BR2_PACKAGE_SDL2
     select BR2_PACKAGE_SDL2_NET
+    select BR2_PACKAGE_LIBOGG
+    select BR2_PACKAGE_LIBVORBIS
+    select BR2_PACKAGE_OPUS
+    select BR2_PACKAGE_OPUSFILE
+    select BR2_PACKAGE_JPEG
+    select BR2_PACKAGE_LIBCURL
     depends on BR2_PACKAGE_HAS_LIBGL || BR2_PACKAGE_HAS_LIBGLES
     help
       The ioquake3 community effort to continue supporting/developing id's Quake III Arena.
