--- a/board/rockchip/rk3399/linux-defconfig.config
+++ b/board/rockchip/rk3399/linux-defconfig.config
@@ -2790,6 +2790,14 @@ CONFIG_ZD1211RW=m
 # CONFIG_ZD1211RW_DEBUG is not set
 CONFIG_WLAN_VENDOR_QUANTENNA=y
 # CONFIG_QTNFMAC_PCIE is not set
+CONFIG_SPARD_WLAN_SUPPORT=y
+CONFIG_WCN_BSP_DRIVER_BUILDIN=y
+CONFIG_RK_WIFI_DEVICE_UWE5621=y
+CONFIG_WLAN_UWE5621=m
+CONFIG_WLAN_UWE5622=m
+CONFIG_SPRDWL_NG=m
+CONFIG_UNISOC_WIFI_PS=y
+CONFIG_TTY_OVERY_SDIO=m
 CONFIG_MAC80211_HWSIM=m
 CONFIG_VIRT_WIFI=m
 # CONFIG_WAN is not set
