--- a/package/emulators/dolphin-triforce/Config.in
+++ b/package/emulators/dolphin-triforce/Config.in
@@ -10,6 +10,7 @@ config BR2_PACKAGE_DOLPHIN_TRIFORCE
 	select BR2_PACKAGE_LIBUSB
 	select BR2_PACKAGE_LZO
 	select BR2_PACKAGE_SPEEX
+	select BR2_PACKAGE_SPEEXDSP
 	select BR2_PACKAGE_XZ
 	select BR2_PACKAGE_ZLIB
 	help
