--- a/package/emulators/libretro/libretro-sameboy/Config.in
+++ b/package/emulators/libretro/libretro-sameboy/Config.in
@@ -2,6 +2,7 @@ config BR2_PACKAGE_LIBRETRO_SAMEBOY
     bool "libretro-sameboy"
 	depends on BR2_INSTALL_LIBSTDCPP
 	select BR2_PACKAGE_RGBDS
+	select BR2_PACKAGE_XXD
 
       help
         DMG/CGB GameBoy emulator for libretro
