Fix JZ4770 build (no Rust support but at least it builds, let's boot it up now)

--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -116,7 +116,7 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	select BR2_PACKAGE_USBMOUNT			# usb key/sd card mounter
 	select BR2_PACKAGE_USBUTILS			# usb key/sd card tools
 	select BR2_PACKAGE_REGLINUX_SCRIPTS		# REG-Linux scripts
-	select BR2_PACKAGE_REGLINUX_MSG			# reglinux screen configuration
+	select BR2_PACKAGE_REGLINUX_MSG			if !BR2_mipsel # reglinux screen configuration
 	select BR2_PACKAGE_BATOCERA_SETTINGS		# system-settings-get/set
 
 	# Use ALSA light audio stack for weak platforms
