If BR_ENABLE_DEBUG set loglevel=debug and leave system.security off

--- a/Makefile.jenkins
+++ b/Makefile.jenkins
@@ -16,15 +16,15 @@ DOCKER		?= docker
 -include $(LOCAL_MK)
 
 ifdef PARALLEL_BUILD
-	EXTRA_OPTS +=  BR2_PER_PACKAGE_DIRECTORIES=y
+	EXTRA_OPTS += BR2_PER_PACKAGE_DIRECTORIES=y
 endif
 
 ifdef DEBUG_BUILD
-	EXTRA_OPTS +=  BR2_ENABLE_DEBUG=y
+	EXTRA_OPTS += BR2_ENABLE_DEBUG=y
 endif
 
-MAKE_OPTS  += -j$(MAKE_JLEVEL)
-MAKE_OPTS  += -l$(MAKE_LLEVEL)
+MAKE_OPTS += -j$(MAKE_JLEVEL)
+MAKE_OPTS += -l$(MAKE_LLEVEL)
 
 ifndef BATCH_MODE
 	DOCKER_OPTS += -i
@@ -34,8 +34,8 @@ DOCKER_REPO := reglinux
 IMAGE_NAME  := reglinux-build
 
 TARGETS := $(sort $(shell find $(PROJECT_DIR)/configs/ -name 'r*' | sed -n 's/.*\/reglinux-\(.*\).board/\1/p'))
-UID  := $(shell id -u)
-GID  := $(shell id -g)
+UID := $(shell id -u)
+GID := $(shell id -g)
 
 $(if $(shell which $(DOCKER) 2>/dev/null),, $(error "$(DOCKER) not found!"))
 
@@ -53,7 +53,7 @@ vars:
 
 
 build-docker-image:
-	$(DOCKER) build .  $(DOCKER_REPO)/$(IMAGE_NAME)
+	$(DOCKER) build . -t $(DOCKER_REPO)/$(IMAGE_NAME)
 	@touch .ba-docker-image-available
 
 .ba-docker-image-available:
@@ -85,7 +85,7 @@ gh-token:
 	$(if $(findstring $*, $(TARGETS)),,$(error "$* not supported!"))
 
 %-clean: gh-token reglinux-docker-image output-dir-%
-	@$(DOCKER) run  --init --rm \
+	@$(DOCKER) run --init --rm \
 		-v $(PROJECT_DIR):/build \
 		-v $(DL_DIR):/build/buildroot/dl \
 		-v $(OUTPUT_DIR)/$*:/$* \
@@ -101,7 +101,7 @@ gh-token:
 	@for opt in $(EXTRA_OPTS); do \
 		echo $$opt >> $(PROJECT_DIR)/configs/reglinux-$*_defconfig ; \
 	done
-	@$(DOCKER) run  --init --rm \
+	@$(DOCKER) run --init --rm \
 		-v $(PROJECT_DIR):/build \
 		-v $(DL_DIR):/build/buildroot/dl \
 		-v $(OUTPUT_DIR)/$*:/$* \
@@ -113,7 +113,7 @@ gh-token:
 		make O=/$* BR2_EXTERNAL=/build -C /build/buildroot reglinux-$*_defconfig
 
 %-build: gh-token reglinux-docker-image %-config ccache-dir dl-dir
-	@$(DOCKER) run  --init --rm \
+	@$(DOCKER) run --init --rm \
 		-v $(PROJECT_DIR):/build \
 		-v $(DL_DIR):/build/buildroot/dl \
 		-v $(OUTPUT_DIR)/$*:/$* \
@@ -126,7 +126,7 @@ gh-token:
 		make $(MAKE_OPTS) O=/$* BR2_EXTERNAL=/build -C /build/buildroot $(CMD)
 
 %-source: gh-token reglinux-docker-image %-config ccache-dir dl-dir
-	@$(DOCKER) run  --init --rm \
+	@$(DOCKER) run --init --rm \
 		-v $(PROJECT_DIR):/build \
 		-v $(DL_DIR):/build/buildroot/dl \
 		-v $(OUTPUT_DIR)/$*:/$* \
@@ -139,7 +139,7 @@ gh-token:
 		make $(MAKE_OPTS) O=/$* BR2_EXTERNAL=/build -C /build/buildroot source
 
 %-show-build-order: gh-token reglinux-docker-image %-config ccache-dir dl-dir
-	@$(DOCKER) run  --init --rm \
+	@$(DOCKER) run --init --rm \
 		-v $(PROJECT_DIR):/build \
 		-v $(DL_DIR):/build/buildroot/dl \
 		-v $(OUTPUT_DIR)/$*:/$* \
@@ -152,7 +152,7 @@ gh-token:
 		make $(MAKE_OPTS) O=/$* BR2_EXTERNAL=/build -C /build/buildroot show-build-order
 
 %-kernel: gh-token reglinux-docker-image %-config ccache-dir dl-dir
-	@$(DOCKER) run  --init --rm \
+	@$(DOCKER) run --init --rm \
 		-v $(PROJECT_DIR):/build \
 		-v $(DL_DIR):/build/buildroot/dl \
 		-v $(OUTPUT_DIR)/$*:/$* \
@@ -179,7 +179,7 @@ gh-token:
 
 %-shell: gh-token reglinux-docker-image output-dir-%
 	$(if $(BATCH_MODE),$(if $(CMD),,$(error "not suppoorted in BATCH_MODE if CMD not specified!")),)
-	@$(DOCKER) run  --init --rm \
+	@$(DOCKER) run --init --rm \
 		-v $(PROJECT_DIR):/build \
 		-v $(DL_DIR):/build/buildroot/dl \
 		-v $(OUTPUT_DIR)/$*:/$* \
@@ -193,7 +193,7 @@ gh-token:
 		$(CMD)
 
 %-ccache-stats: gh-token reglinux-docker-image %-config ccache-dir dl-dir
-	@$(DOCKER) run  --init --rm \
+	@$(DOCKER) run --init --rm \
 		-v $(PROJECT_DIR):/build \
 		-v $(DL_DIR):/build/buildroot/dl \
 		-v $(OUTPUT_DIR)/$*:/$* \
