Misc WIP : - Early H700 and S812 bump to kernel 6.15 + fixups - Temp fix RK3588 Jenkins (debug) build > 2GB - Make dbus-broker buildable without systemd - Adjust RetroArch rgui/xmb/ozone depending on GLES2/GLES3/Desktop GL - Adjust configgen RA defaults

--- a/package/system/reglinux-configgen/configs/configgen-defaults-odroidxu4.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults-odroidxu4.yml
@@ -1,6 +1,7 @@
 default:
   options:
     retroarch.video_hard_sync: 0
+    retroarch.menu_driver: xmb
     retroarch.audio_driver: pipewire
 
 dreamcast:
