--- a/package/retroarch/retroarch/Config.in
+++ b/package/retroarch/retroarch/Config.in
@@ -1,11 +1,10 @@
 config BR2_PACKAGE_RETROARCH
     bool "Retroarch"
 	depends on (BR2_PACKAGE_HAS_LIBGLES || BR2_PACKAGE_HAS_LIBEGL || BR2_PACKAGE_HAS_LIBGL)
-	select dejavu
+	select BR2_PACKAGE_DEJAVU
 	select BR2_PACKAGE_RETROARCH_ASSETS
 	select BR2_PACKAGE_RETROARCH_JOYPAD_AUTOCONFIG
 	select BR2_PACKAGE_LIBRETRO_CORE_INFO
-	select BR2_PACKAGE_FLAC
 	select BR2_PACKAGE_SLANG_SHADERS        if BR2_PACKAGE_REGLINUX_VULKAN
 	select BR2_PACKAGE_NOTO_CJK_FONTS
 	select BR2_PACKAGE_GAMEMODE
