--- a/package/system/reglinux-configgen/configs/configgen-defaults-rk3128.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults-rk3128.yml
@@ -2,7 +2,7 @@ default:
   options:
     video_threaded: true
     smooth: false
-    retroarch.menu_driver: xmb
+    retroarch.menu_driver: rgui
     retroarch.audio_driver: alsathread
 
 mastersystem:
