Fix standalone hatari, rework libretro cores : - Better custom lr-cdi core - Bump vice, puae / puae2021, pc88 - Rework selection not to bloat with too many cores for DS, MAME, Atari ST

--- a/package/system/reglinux-configgen/configs/configgen-defaults-a3gen2.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults-a3gen2.yml
@@ -9,7 +9,7 @@ pcenginecd:
   core:     pce
 nds:
   emulator: libretro
-  core:     melonds
+  core:     melondsds
 fmtowns:
   emulator: libretro
   core:     mame
