--- a/package/system/reglinux-configgen/configs/configgen-defaults-jz4770.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults-jz4770.yml
@@ -20,6 +20,9 @@ amigacdtv:
 atari2600:
   emulator: libretro
   core:     stella2014
+atarist:
+  emulator: libretro
+  core:     hatari
 mastersystem:
   emulator: libretro
   core:     picodrive
