--- a/package/system/reglinux-configgen/configs/configgen-defaults-mt8395.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults-mt8395.yml
@@ -6,7 +6,7 @@ pcenginecd:
   core:     pce
 nds:
   emulator: libretro
-  core:     melonds
+  core:     melondsds
 ps2:
   emulator: libretro
   core:     play
