--- a/package/system/reglinux-configgen/configs/configgen-defaults-s9gen4.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults-s9gen4.yml
@@ -7,7 +7,7 @@ default:
   core:     panda3ds
 nds:
   emulator: libretro
-  core:     melonds
+  core:     melondsds
 fmtowns:
   emulator: libretro
   core:     mame
