--- a/package/emulators/libretro/libretro-same-cdi/Config.in
+++ b/package/emulators/libretro/libretro-same-cdi/Config.in
@@ -1,5 +1,14 @@
 config BR2_PACKAGE_LIBRETRO_SAME_CDI
     bool "libretro-same-cdi"
+
+    select BR2_PACKAGE_ZLIB
+    select BR2_PACKAGE_ZSTD
+    select BR2_PACKAGE_FLAC
+    select BR2_PACKAGE_RAPIDJSON
+    select BR2_PACKAGE_PUGIXML
+    select BR2_PACKAGE_SQLITE
+    select BR2_PACKAGE_EXPAT
+    select BR2_PACKAGE_JPEG
     
       help
         A libretro CD-i emulator core (branched from MAME)
