--- a/package/system/reglinux-configgen/configs/configgen-defaults-rk3128.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults-rk3128.yml
@@ -5,6 +5,9 @@ default:
     retroarch.menu_driver: rgui
     retroarch.audio_driver: alsathread
 
+atarist:
+  emulator: libretro
+  core:     hatari
 mastersystem:
   emulator: libretro
   core:     picodrive
