--- a/package/system/reglinux-configgen/configs/configgen-defaults-s922x.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults-s922x.yml
@@ -9,7 +9,7 @@ pcenginecd:
   core:     pce
 nds:
   emulator: libretro
-  core:     melonds
+  core:     melondsds
 fmtowns:
   emulator: libretro
   core:     mame
