--- a/package/system/reglinux-configgen/configs/configgen-defaults-sm8250.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults-sm8250.yml
@@ -15,7 +15,7 @@ n64:
   core:     mupen64plus-next
 nds:
   emulator: libretro
-  core:     melonds
+  core:     melondsds
 ps2:
   emulator: libretro
   core:     play
