--- a/package/emulators/shadps4/Config.in
+++ b/package/emulators/shadps4/Config.in
@@ -16,6 +16,10 @@ config BR2_PACKAGE_SHADPS4
     select BR2_PACKAGE_VULKAN_LOADER
     select BR2_PACKAGE_VULKAN_VALIDATIONLAYERS
     select BR2_PACKAGE_FFMPEG
+    select BR2_PACKAGE_BOOST
+    select BR2_PACKAGE_FMT
+    select BR2_PACKAGE_GLSLANG
+    select BR2_PACKAGE_SDL3
 
     help
       Sony Playstation 4 emulator.
