--- a/package/emulators/duckstation/Config.in
+++ b/package/emulators/duckstation/Config.in
@@ -1,25 +1,10 @@
 config BR2_PACKAGE_DUCKSTATION
-	bool "duckstation"
-	select BR2_PACKAGE_REGLINUX_QT6
-	select BR2_PACKAGE_FMT
-	select BR2_PACKAGE_BOOST
-	select BR2_PACKAGE_FFMPEG
-	select BR2_PACKAGE_SDL2
-	select BR2_PACKAGE_WEBP
-	select BR2_PACKAGE_LIBEVDEV
-	select BR2_PACKAGE_LIBDRM
-	select BR2_PACKAGE_LIBCURL
-	select BR2_PACKAGE_LUNASVG
-	select BR2_PACKAGE_ECM
-	select BR2_PACKAGE_LIBXKBCOMMON
-	select BR2_PACKAGE_SHADERC
-	select BR2_PACKAGE_GLSLANG	if BR2_PACKAGE_REGLINUX_VULKAN
-	select BR2_PACKAGE_LIBBACKTRACE
-	select BR2_PACKAGE_WEBP
-	select BR2_PACKAGE_CPUINFO
-	select BR2_PACKAGE_SPIRV_CROSS
-	select BR2_PACKAGE_LIBSOUNDTOUCH
-	help
-		DuckStation - PlayStation 1, aka. PSX Emulator
+    bool "duckstation"
+    depends on BR2_x86_64 || BR2_arm || BR2_aarch64
+    # TODO depends on what else ? Qt ? GL ? Vulkan ?
 
-		https://github.com/stenzek/duckstation
+    help
+      DuckStation - PlayStation 1, aka. PSX Emulator
+      DuckStation features a fully-featured frontend built using Qt.
+
+	    https://github.com/stenzek/duckstation
