--- a/package/system/reglinux-configgen/configs/configgen-defaults.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults.yml
@@ -692,6 +692,9 @@ xash3d_fwgs:
 xegs:
   emulator: libretro
   core:     mame
+xrick:
+  emulator: libretro
+  core:     xrick
 xbox:
   emulator: xemu
   core:     xemu
