Revert back lr-xrick removal, revert RA audio driver from PW to alsathread, some bumps

--- a/package/system/reglinux-configgen/configs/configgen-defaults-h616.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults-h616.yml
@@ -2,7 +2,7 @@ default:
   options:
     video_threaded: true
     smooth: false
-    retroarch.audio_driver: pipewire
+    retroarch.audio_driver: alsathread
 
 3ds:
   emulator: libretro
