--- a/package/system/reglinux-configgen/configs/configgen-defaults-h6.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults-h6.yml
@@ -3,7 +3,7 @@ default:
     video_threaded: true
     smooth: false
     retroarch.menu_driver: xmb
-    retroarch.audio_driver: pipewire
+    retroarch.audio_driver: alsathread
 
 nds:
   emulator: drastic
