--- a/package/system/reglinux-configgen/configs/configgen-defaults-odroidxu4.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults-odroidxu4.yml
@@ -2,7 +2,7 @@ default:
   options:
     retroarch.video_hard_sync: 0
     retroarch.menu_driver: xmb
-    retroarch.audio_driver: pipewire
+    retroarch.audio_driver: alsathread
 
 dreamcast:
   options:
