--- a/package/system/reglinux-configgen/configs/configgen-defaults-s905gen3.yml
+++ b/package/system/reglinux-configgen/configs/configgen-defaults-s905gen3.yml
@@ -2,7 +2,7 @@ default:
   options:
     video_threaded: true
     smooth: false
-    retroarch.audio_driver: pipewire
+    retroarch.audio_driver: alsathread
 
 3ds:
   emulator: libretro
