Kernel 6.15-rc4 for h700 target + some fixes-related bumps

--- a/package/ports/openmw/Config.in
+++ b/package/ports/openmw/Config.in
@@ -16,6 +16,7 @@ config BR2_PACKAGE_OPENMW
 	#select BR2_PACKAGE_REGLINUX_LUAJIT
 	select BR2_PACKAGE_LUA
 	select BR2_PACKAGE_LIBRSVG
+	select BR2_PACKAGE_FLTK
 
 	help
 	  OpenMW is a free and open-source game engine recreation 
