Remove qtsixa / enforce HID_SONY=m in kernel, update bluetooth stack to NOT use deprecated sixaxis/sixpair plugins

--- a/board/broadcom/bcm2712/linux-broadcom64-current.config
+++ b/board/broadcom/bcm2712/linux-broadcom64-current.config
@@ -6210,7 +6210,7 @@ CONFIG_HID_ROCCAT=m
 CONFIG_HID_SAMSUNG=y
 # CONFIG_HID_SEMITEK is not set
 # CONFIG_HID_SIGMAMICRO is not set
-CONFIG_HID_SONY=y
+CONFIG_HID_SONY=m
 CONFIG_SONY_FF=y
 CONFIG_HID_SPEEDLINK=m
 CONFIG_HID_STEAM=m
