--- a/board/ingenic/jz4770/linux-jz4770.config
+++ b/board/ingenic/jz4770/linux-jz4770.config
@@ -2913,7 +2913,7 @@ CONFIG_HID_LOGITECH=y
 # CONFIG_HID_SAMSUNG is not set
 # CONFIG_HID_SEMITEK is not set
 # CONFIG_HID_SIGMAMICRO is not set
-# CONFIG_HID_SONY is not set
+CONFIG_HID_SONY=m
 # CONFIG_HID_SPEEDLINK is not set
 # CONFIG_HID_STEAM is not set
 # CONFIG_HID_STEELSERIES is not set
