--- a/board/samsung/exynos5422/linux-exynos5422-defconfig.config
+++ b/board/samsung/exynos5422/linux-exynos5422-defconfig.config
@@ -4315,7 +4315,7 @@ CONFIG_NINTENDO_FF=y
 # CONFIG_HID_PETALYNX is not set
 # CONFIG_HID_PICOLCD is not set
 # CONFIG_HID_PLANTRONICS is not set
-CONFIG_HID_PLAYSTATION=y
+CONFIG_HID_PLAYSTATION=m
 CONFIG_PLAYSTATION_FF=y
 # CONFIG_HID_PXRC is not set
 # CONFIG_HID_RAZER is not set
@@ -4326,7 +4326,7 @@ CONFIG_PLAYSTATION_FF=y
 # CONFIG_HID_SAMSUNG is not set
 # CONFIG_HID_SEMITEK is not set
 # CONFIG_HID_SIGMAMICRO is not set
-# CONFIG_HID_SONY is not set
+CONFIG_HID_SONY=m
 # CONFIG_HID_SPEEDLINK is not set
 # CONFIG_HID_STEAM is not set
 # CONFIG_HID_STEELSERIES is not set
