--- a/board/broadcom/bcm2835/linux-broadcom32-current.config
+++ b/board/broadcom/bcm2835/linux-broadcom32-current.config
@@ -4413,7 +4413,7 @@ CONFIG_HID_PETALYNX=y
 CONFIG_HID_SAMSUNG=y
 # CONFIG_HID_SEMITEK is not set
 # CONFIG_HID_SIGMAMICRO is not set
-CONFIG_HID_SONY=y
+CONFIG_HID_SONY=m
 CONFIG_SONY_FF=y
 # CONFIG_HID_SPEEDLINK is not set
 CONFIG_HID_STEAM=m
