--- a/board/mediatek/mt8395/linux-defconfig.config
+++ b/board/mediatek/mt8395/linux-defconfig.config
@@ -7161,7 +7161,7 @@ CONFIG_HID_MULTITOUCH=y
 # CONFIG_HID_SAMSUNG is not set
 # CONFIG_HID_SEMITEK is not set
 # CONFIG_HID_SIGMAMICRO is not set
-# CONFIG_HID_SONY is not set
+CONFIG_HID_SONY=m
 # CONFIG_HID_SPEEDLINK is not set
 # CONFIG_HID_STEAM is not set
 # CONFIG_HID_STEELSERIES is not set
