--- a/board/qualcomm/sm8550/linux_sm8550-defconfig.config
+++ b/board/qualcomm/sm8550/linux_sm8550-defconfig.config
@@ -4990,7 +4990,7 @@ CONFIG_PLAYSTATION_FF=y
 # CONFIG_HID_SAMSUNG is not set
 # CONFIG_HID_SEMITEK is not set
 # CONFIG_HID_SIGMAMICRO is not set
-CONFIG_HID_SONY=y
+CONFIG_HID_SONY=m
 CONFIG_SONY_FF=y
 # CONFIG_HID_SPEEDLINK is not set
 # CONFIG_HID_STEAM is not set
