--- a/board/rockchip/rk3328/linux-rk3328-defconfig.config
+++ b/board/rockchip/rk3328/linux-rk3328-defconfig.config
@@ -4613,7 +4613,7 @@ CONFIG_PLAYSTATION_FF=y
 CONFIG_HID_SAMSUNG=y
 # CONFIG_HID_SEMITEK is not set
 # CONFIG_HID_SIGMAMICRO is not set
-CONFIG_HID_SONY=y
+CONFIG_HID_SONY=m
 CONFIG_SONY_FF=y
 # CONFIG_HID_SPEEDLINK is not set
 CONFIG_HID_STEAM=m
