Add ampart for Amlogic eMMC partitioning + bump gzdoom

--- a/Config.in
+++ b/Config.in
@@ -297,6 +297,7 @@ menu "Libraries"
 endmenu
 
 menu "Utils"
+	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/ampart/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/btop/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/evsieve/Config.in"
 	source "$BR2_EXTERNAL_REGLINUX_PATH/package/utils/inputplumber/Config.in"
