--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -58,6 +58,9 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
         select BR2_PACKAGE_HOST_GENIMAGE
         select BR2_PACKAGE_HOST_GENEXT2FS
 
+	# Amlogic eMMC partition tool
+	select BR2_PACKAGE_AMPART			BR2_PACKAGE_SYSTEM_TARGET_AMLOGIC_ANY
+
 	# minimal system required packages
 	select BR2_TARGET_BATOCERA_IMAGES_DEFINITIONS
 	select BR2_PACKAGE_BASH				# bash shell, used as the interactive shell
