Fix build and prepare new h700 targets (rg35xx-h rg40xx-h rg40xx-v)

--- a/package/system/reglinux-system/Config.in
+++ b/package/system/reglinux-system/Config.in
@@ -59,7 +59,7 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
         select BR2_PACKAGE_HOST_GENEXT2FS
 
 	# Amlogic eMMC partition tool
-	select BR2_PACKAGE_AMPART			BR2_PACKAGE_SYSTEM_TARGET_AMLOGIC_ANY
+	select BR2_PACKAGE_AMPART			if BR2_PACKAGE_SYSTEM_TARGET_AMLOGIC_ANY
 
 	# minimal system required packages
 	select BR2_TARGET_BATOCERA_IMAGES_DEFINITIONS
