Add packages and permissions to build-docker-image

--- a/.github/workflows/build-docker-image.yaml
+++ b/.github/workflows/build-docker-image.yaml
@@ -9,6 +9,10 @@ on:
     paths:
       - 'Dockerfile'
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   build-docker-image:
     name: Build Docker Image
