Make use of singleadc joypad driver for H700 handhelds (analogs tested working on RG35XX-H)

--- a/board/allwinner/h700/linux-sunxi64-current.config
+++ b/board/allwinner/h700/linux-sunxi64-current.config
@@ -2784,6 +2784,8 @@ CONFIG_MOUSE_PS2_SMBUS=y
 # CONFIG_MOUSE_SYNAPTICS_I2C is not set
 # CONFIG_MOUSE_SYNAPTICS_USB is not set
 CONFIG_INPUT_JOYSTICK=y
+CONFIG_INPUT_POLLDEV=y
+CONFIG_JOYSTICK_SINGLEADCJOY=m
 # CONFIG_JOYSTICK_ANALOG is not set
 # CONFIG_JOYSTICK_A3D is not set
 # CONFIG_JOYSTICK_ADC is not set
@@ -6667,7 +6669,7 @@ CONFIG_YAMAHA_YAS530=m
 #
 # Multiplexers
 #
-# CONFIG_IIO_MUX is not set
+CONFIG_IIO_MUX=m
 # end of Multiplexers
 
 #
