--- a/package/batocera/gpu/intel-clc/Config.in
+++ b/package/batocera/gpu/intel-clc/Config.in
@@ -8,10 +8,11 @@ menuconfig BR2_PACKAGE_INTEL_CLC
 	select BR2_PACKAGE_EXPAT
 	select BR2_PACKAGE_LIBDRM
 	select BR2_PACKAGE_ZLIB
-	select BR2_PACKAGE_LLVM
-	select BR2_PACKAGE_LLVM_RTTI
-	select BR2_PACKAGE_HOST_LLVM
-	select BR2_PACKAGE_HOST_LLVM_RTTI
+	select BR2_PACKAGE_REGLINUX_LLVM        if BR2_PACKAGE_REGLINUX_LLVM_BUILD_FROM_SOURCE != "y"
+	select BR2_PACKAGE_LLVM                 if !BR2_PACKAGE_REGLINUX_LLVM
+	select BR2_PACKAGE_LLVM_RTTI            if !BR2_PACKAGE_REGLINUX_LLVM
+	select BR2_PACKAGE_HOST_LLVM            if !BR2_PACKAGE_REGLINUX_LLVM
+	select BR2_PACKAGE_HOST_LLVM_RTTI       if !BR2_PACKAGE_REGLINUX_LLVM
 	select BR2_PACKAGE_PYTHON_PYCPARSER
 	select BR2_PACKAGE_HOST_PYTHON_PYCPARSER
 	help
