--- a/package/emulators/rpcs3/Config.in
+++ b/package/emulators/rpcs3/Config.in
@@ -3,7 +3,8 @@ config BR2_PACKAGE_RPCS3
     depends on BR2_TOOLCHAIN_GCC_AT_LEAST_8
     select BR2_HOST_CMAKE_AT_LEAST_3_24
     select BR2_PACKAGE_ALSA_LIB
-    select BR2_PACKAGE_LLVM
+    select BR2_PACKAGE_REGLINUX_LLVM if BR2_PACKAGE_REGLINUX_LLVM_BUILD_FROM_SOURCE != "y"
+    select BR2_PACKAGE_LLVM if !BR2_PACKAGE_REGLINUX_LLVM
     select BR2_PACKAGE_FAUDIO
     select BR2_PACKAGE_FFMPEG_SWSCALE
     select BR2_PACKAGE_LIBEVDEV
