--- a/custom/package/mesa3d/Config.in
+++ b/custom/package/mesa3d/Config.in
@@ -12,8 +12,9 @@ menuconfig BR2_PACKAGE_MESA3D
 	select BR2_PACKAGE_PYTHON3			# REG
 	select BR2_PACKAGE_PYTHON_PYYAML		# REG
 	select BR2_PACKAGE_HOST_GLSLANG			if BR2_PACKAGE_REGLINUX_XWAYLAND || BR2_PACKAGE_REGLINUX_VULKAN # REG
-	select BR2_PACKAGE_CLANG			if BR2_x86_64 || BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_ASAHI || BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_PANFROST # REG
-	select BR2_PACKAGE_LIBCLC			if BR2_x86_64 || BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_ASAHI || BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_PANFROST # REG
+	select BR2_PACKAGE_REGLINUX_LLVM        if BR2_PACKAGE_REGLINUX_LLVM_BUILD_FROM_SOURCE != "y" && (BR2_x86_64 || BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_ASAHI || BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_PANFROST) # REG
+	select BR2_PACKAGE_CLANG                if !BR2_PACKAGE_REGLINUX_LLVM && (BR2_x86_64 || BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_ASAHI || BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_PANFROST) # REG
+	select BR2_PACKAGE_LIBCLC               if !BR2_PACKAGE_REGLINUX_LLVM && (BR2_x86_64 || BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_ASAHI || BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_PANFROST) # REG
 	select BR2_PACKAGE_MESA3D_LLVM			if BR2_x86_64 || BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_ASAHI || BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_PANFROST # REG
 	select BR2_PACKAGE_SPIRV_LLVM_TRANSLATOR	if BR2_x86_64 || BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_ASAHI || BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_PANFROST # REG
 	select BR2_PACKAGE_SPIRV_TOOLS			if BR2_x86_64 || BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_ASAHI || BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_PANFROST # REG
@@ -39,7 +40,8 @@ config BR2_PACKAGE_MESA3D_LLVM
 	depends on !BR2_STATIC_LIBS
 	depends on BR2_USE_WCHAR # std::wstring
 	depends on BR2_HOST_GCC_AT_LEAST_7
-	select BR2_PACKAGE_LLVM
+	select BR2_PACKAGE_REGLINUX_LLVM        if BR2_PACKAGE_REGLINUX_LLVM_BUILD_FROM_SOURCE != "y"
+	select BR2_PACKAGE_LLVM                 if !BR2_PACKAGE_REGLINUX_LLVM
 
 comment "llvm support needs a toolchain w/ wchar, threads, C++, gcc >= 7, dynamic library, host gcc >= 7"
 	depends on BR2_PACKAGE_LLVM_ARCH_SUPPORTS
@@ -59,9 +61,10 @@ config BR2_PACKAGE_MESA3D_OPENCL
 	depends on BR2_PACKAGE_MESA3D_LLVM
 	depends on BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_R600 || \
 		BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_RADEONSI
-	select BR2_PACKAGE_LLVM_RTTI
-	select BR2_PACKAGE_CLANG
-	select BR2_PACKAGE_LIBCLC
+	select BR2_PACKAGE_REGLINUX_LLVM        if BR2_PACKAGE_REGLINUX_LLVM_BUILD_FROM_SOURCE != "y"
+	select BR2_PACKAGE_LLVM_RTTI            if !BR2_PACKAGE_REGLINUX_LLVM
+	select BR2_PACKAGE_CLANG                if !BR2_PACKAGE_REGLINUX_LLVM
+	select BR2_PACKAGE_LIBCLC               if !BR2_PACKAGE_REGLINUX_LLVM
 	select BR2_PACKAGE_HAS_LIBOPENCL
 
 # inform the .mk file of gallium or vulkan driver selection
@@ -178,8 +181,9 @@ config BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_ASAHI
 	select BR2_PACKAGE_MESA3D_GALLIUM_DRIVER
 	select BR2_PACKAGE_MESA3D_OPENGL_EGL
 	select BR2_PACKAGE_MESA3D_LLVM
-	select BR2_PACKAGE_LIBCLC
-	select BR2_PACKAGE_CLANG
+	select BR2_PACKAGE_REGLINUX_LLVM        if BR2_PACKAGE_REGLINUX_LLVM_BUILD_FROM_SOURCE != "y"
+	select BR2_PACKAGE_LIBCLC               if !BR2_PACKAGE_REGLINUX_LLVM
+	select BR2_PACKAGE_CLANG                if !BR2_PACKAGE_REGLINUX_LLVM
 	select BR2_PACKAGE_SPIRV_TOOLS
 	select BR2_PACKAGE_HOST_QEMU
 	help
