--- a/package/utils/inputplumber/Config.in
+++ b/package/utils/inputplumber/Config.in
@@ -5,7 +5,8 @@ config BR2_PACKAGE_INPUTPLUMBER
 	select BR2_PACKAGE_EUDEV
 	select BR2_PACKAGE_LIBEVDEV
 	select BR2_PACKAGE_LIBIIO
-	select BR2_PACKAGE_CLANG
+	select BR2_PACKAGE_REGLINUX_LLVM    if BR2_PACKAGE_REGLINUX_LLVM_BUILD_FROM_SOURCE != "y"
+	select BR2_PACKAGE_CLANG            if !BR2_PACKAGE_REGLINUX_LLVM
 	help
 	  InputPlumber is an open source input routing and control 
 	  daemon for Linux. It can be used to combine any number 
